Changes for 1.3.5:

 - fixed configuration file reading for WinXX (Eugene)
 - fixed uname for WinXX (Eugene)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei)
 - misc fixes for static linkage (Alexei, Eugene)
 - more strict processing of response codes of all passive checks (Alexei)
 - new logic for poller for unreachable hosts (Alexei)
 - fixed fatal error in cbutton.inc.php for some platforms (Alexei)
 - fixed zabbix_server's option -V (Alexei)
 - fixed compilation under Solaris (Alexei)
 - added discovery based on data received from ZABBIX and SNMP agents (Alexei)

Changes for 1.3.5:

 - removed support of autoregistration, use autodiscovery instead (Alexei) 
 - fixed creation of Sqlite schema (Alexei)
 - fixed dependences of deleted elements for actions (Eugene) 
 - developed slideshows (Eugene)
 - fixed carceling of frontend installation screen (Eugene)
 - fixed processing of COUNTER64 SNMP values (Alexei)
 - added frontend-side support of external checks. (Eugene)
 - fixed trigger dependencies for templated triggers (Eugene)
 - fixed support of 'curl' library (Eugene)
 - added suport of 'automake' v1.6 (Eugene)
 - fixed oracle support (Eugene)
 - added support of MySQL v3.23 (Eugene)
 - fixed unnecessary check of MySQL if other database is selected in Wizard (Alexei)
 - fixed remembering of previous charts viewed (Eugene)
 - fixed color validation (Eugene)
 - fixed template graphs editing (Eugene)
 - fixed trigger overview status (Eugene)
 - developed action configurations for discodery events (Eugene)
 - do not start HTTP poller if libcurl is not included (Alexei)
 - fixed function diff for integer items (Alexei)
 - fixed SMS sender (Eugene)
 - improved ZABBIX sender (Eugene)
 - added filering of log items by regexp on agentside (Eugene)
 - removed check of function bcpowmod() in GUI Wizard (Alexei)
 - updated poller to have current system date (Alexei)
 - removed unnecessary dependencies fron autoconf script (Alexei)