@@ -27,6 +27,7 @@ int	CONFIG_ZABBIX_FORKS		= 5;
 
 
 char	*CONFIG_LOG_FILE		= NULL;
+int	CONFIG_LOG_FILE_SIZE		= 1;
 char	CONFIG_ALLOW_ROOT		= 0;
 int	CONFIG_TIMEOUT			= AGENT_TIMEOUT;
 
